<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:visible="false"
        android:id="@+id/item_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/menu_delete"
        app:showAsAction="always"/>

    <item
        android:id="@+id/item_cancel"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/menu_cancel"
        app:showAsAction="always"/>

    <item
        android:id="@+id/nav_newClient"
        android:orderInCategory="100"
        android:title="@string/menu_addClient"
        app:showAsAction="never" />

    <item
        android:id="@+id/nav_client"
        android:orderInCategory="100"
        android:title="@string/action_client"
        app:showAsAction="never" />


</menu>