<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addClient"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.client.NewClientFragment">


    <ImageView
        android:id="@+id/contactImage"
        android:layout_width="388dp"
        android:layout_height="127dp"
        app:layout_constraintTop_toBottomOf="@+id/clientTitle"
        app:srcCompat="@drawable/menu_client_icon"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="11dp" />

<!--    <TextView-->
<!--        android:id="@+id/clientTitle"-->
<!--        android:layout_width="186dp"-->
<!--        android:layout_height="37dp"-->
<!--        android:layout_alignParentStart="true"-->
<!--        android:layout_alignParentTop="true"-->
<!--        android:layout_alignParentEnd="true"-->
<!--        android:layout_marginStart="8dp"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:layout_marginEnd="8dp"-->
<!--        android:layout_marginBottom="8dp"-->
<!--        android:text="@string/client_title"-->
<!--        android:textAppearance="?android:attr/textAppearanceLarge"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.578"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.011" />-->

    <EditText
        android:id="@+id/clientAddName"
        android:layout_width="410dp"
        android:layout_height="66dp"
        android:layout_margin="8dp"
        android:autofillHints=""
        android:hint="@string/client_name"
        android:inputType="text"
        android:maxLength="25"
        android:maxLines="1"
        android:padding="8dp"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/contactImage"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/clientAddAddress"
        android:layout_width="410dp"
        android:layout_height="66dp"
        android:layout_margin="8dp"
        android:autofillHints=""
        android:hint="@string/client_address"
        android:inputType="text"
        android:maxLength="25"
        android:maxLines="1"
        android:padding="8dp"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/clientAddName"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/clientAddNumber"
        android:layout_width="410dp"
        android:layout_height="66dp"
        android:layout_margin="8dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:hint="@string/client_number"
        android:inputType="text"
        android:maxLength="25"
        android:maxLines="1"
        android:padding="8dp"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/clientAddAddress"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/clientButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/button"
        android:text="@string/client_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.985"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.92" />


</androidx.constraintlayout.widget.ConstraintLayout>
